clinical paper for BJUI

--- a/report/clinical/BJUI/bibliography.bib
+++ b/report/clinical/BJUI/bibliography.bib
@@ -9,6 +9,35 @@
   publisher={Elsevier}
 }
 
+@article{nixon1997biological,
+  title={Biological variation of prostate specific antigen levels in serum: an evaluation of day-to-day physiological fluctuations in a well-defined cohort of 24 patients},
+  author={Nixon, Randy G and Wener, Mark H and Smith, Katie M and Parson, Robert E and Strobel, Susan A and Brawer, Michael K},
+  journal={The Journal of urology},
+  volume={157},
+  number={6},
+  pages={2183--2190},
+  year={1997},
+  publisher={Elsevier}
+}
+
+@article{kasivisvanathan2020magnetic,
+  title={Magnetic Resonance Imaging Should Be Used in the Active Surveillance of Patients with Localised Prostate Cancer.},
+  author={Kasivisvanathan, Veeru and Giganti, Francesco and Emberton, Mark and Moore, Caroline M},
+  journal={European urology},
+  volume={77},
+  number={3},
+  pages={318},
+  year={2020}
+}
+
+@article{chesnut2019role,
+  title={Role of Changes in Magnetic Resonance Imaging or Clinical Stage in Evaluation of Disease Progression for Men with Prostate Cancer on Active Surveillance},
+  author={Chesnut, Gregory T and Vertosick, Emily A and Benfante, Nicole and Sjoberg, Daniel D and Fainberg, Jonathan and Lee, Taehyoung and Eastham, James and Laudone, Vincent and Scardino, Peter and Touijer, Karim and others},
+  journal={European Urology},
+  year={2019},
+  publisher={Elsevier}
+}
+
 @article{tomer2019personalized,
   title={Personalized Decision Making for Biopsies in Prostate Cancer Active Surveillance Programs},
   author={Tomer, Anirudh and Rizopoulos, Dimitris and Nieboer, Daan and Drost, Frank-Jan and Roobol, Monique J and Steyerberg, Ewout W},
@@ -321,6 +350,17 @@ publisher={Institute of Mathematical Statistics}
   number={4},
   pages={597--603},
   year={2013},
+  publisher={Elsevier}
+}
+
+@article{schoots2015magnetic,
+  title={Magnetic resonance imaging in active surveillance of prostate cancer: a systematic review},
+  author={Schoots, Ivo G and Petrides, Neophytos and Giganti, Francesco and Bokhorst, Leonard P and Rannikko, Antti and Klotz, Laurence and Villers, Arnauld and Hugosson, Jonas and Moore, Caroline M},
+  journal={European urology},
+  volume={67},
+  number={4},
+  pages={627--636},
+  year={2015},
   publisher={Elsevier}
 }
 
