--- a/report/clinical/BJUI/main_manuscript.tex
+++ b/report/clinical/BJUI/main_manuscript.tex
@@ -50,12 +50,14 @@
 %\bibliographystyle{elsarticle-num}
 %%%%%%%%%%%%%%%%%%%%%%%
 
+%\renewcommand{\familydefault}{\sfdefault}
+
 \begin{document}
 
 \begin{frontmatter}
 
-\title{Personalized Biopsy Schedules for Men With Low-Risk Prostate Cancer Under Active Surveillance\tnoteref{wordcount}}
-\tnotetext[wordcount]{Word count: abstract (headings excluded) 300; Text 2488; Total 2788}
+\title{Personalized Biopsy Schedules Based on Risk of Gleason Upgrading for Low-Risk Prostate Cancer Active Surveillance Patients\tnoteref{wordcount}}
+\tnotetext[wordcount]{Word count: 3109}
 
 %% Group authors per affiliation:
 \author[1]{Anirudh Tomer\corref{corauthor}, MSc} 
@@ -100,23 +102,23 @@ Active Surveillance\sep Biopsies \sep Personalized Medicine\sep Prostate Cancer 
 \linenumbers
 
 \input{mainmatter/introduction}
-%Intro: 510 words
-%Cumsum: 510 words
+%Intro: 605 words
+%Cumsum: 605 words
 \input{mainmatter/study_cohort}
-%Study cohort: 245 words
-%Cumsum: 755 words
+%Study cohort: 370 words
+%Cumsum: 975 words
 \input{mainmatter/stat_analysis}
-%Stat analysis: 433 words
-%Cumsum: 1194 words
+%Stat analysis: 621 words
+%Cumsum: 1596 words
 \input{mainmatter/result}
-%Stat analysis: 537 words
-%Cumsum: 1731 words
+%Stat analysis: 650 words
+%Cumsum: 2246 words
 \input{mainmatter/discussion}
-%Stat analysis: 673 words
-%Cumsum: 2403 words
+%Stat analysis: 759 words
+%Cumsum: 3005 words
 \input{mainmatter/conclusion}
-%Conclusion: 85 words
-%Cumsum: 2488 words
+%Conclusion: 104 words
+%Cumsum: 3109 words
 
 \input{mainmatter/author_contrib}
 \input{mainmatter/acknowledment}
