--- a/report/clinical/BJUI/mainmatter/result.tex
+++ b/report/clinical/BJUI/mainmatter/result.tex
@@ -1,8 +1,8 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Results}
-The cause-specific cumulative upgrading-risk at year five of follow-up was 35\% in PRIAS and at most 50\% in validation cohorts (Panel~B, Figure~\ref{fig:auc_beforecalib}). Hence, many patients do not require all biopsies planned in the first five years of AS. In the fitted PRIAS model, the adjusted hazard ratio (aHR) of upgrading for an increase in patient age from 61 to 71 years (25-th to 75-th percentile) was 1.45~(95\%CI:~1.30--1.63). For an increase in fitted PSA value from 2.36 to 3.07 (25-th to 75-th percentile, log scale), the aHR was 0.99~(95\%CI:~0.89--1.11). The strongest predictor of upgrading-risk was instantaneous PSA velocity, with an increase from -0.09 to 0.31 (25-th to 75-th percentile), giving an aHR of 2.47~(95\%CI:~1.93--2.99). The aHR for PSA value and velocity varied between GAP3 cohorts (Supplementary~Table~8).
+The cause-specific cumulative upgrading-risk at year five of follow-up was 35\% in PRIAS and at most 50\% in validation cohorts (Panel~B, Figure~\ref{fig:auc_beforecalib}). In the fitted PRIAS model, the adjusted hazard ratio (aHR) of upgrading for an increase in patient age from 61 to 71 years (25-th to 75-th percentile) was 1.45~(95\%CI:~1.30--1.63). For an increase in fitted PSA value from 2.36 to 3.07 (25-th to 75-th percentile, log scale), the aHR was 0.99~(95\%CI:~0.89--1.11). The strongest predictor of upgrading-risk was instantaneous PSA velocity, with an increase from -0.09 to 0.31 (25-th to 75-th percentile), giving an aHR of 2.47~(95\%CI:~1.93--2.99). The aHR for PSA value and velocity was different in each GAP3 cohort (Supplementary~Table~8).
 
-The time-dependent AUC, calibration plot, and time-dependent MAPE of our model are shown in Figure~\ref{fig:auc_beforecalib}, and Supplementary~Figure~8. In all cohorts, time-dependent AUC was moderate (0.55 to 0.75) over the whole follow-up period. Time-dependent MAPE was large (0.3 to 0.45) in those cohorts where the impact of PSA on upgrading-risk was different from PRIAS (e.g., MUSIC cohort, Supplementary~Table~8), and moderate (0.1 to 0.3) otherwise. In all cohorts, the MAPE decreased rapidly after year one of follow-up. Our model was miscalibrated for validation cohorts (Panel~B, Figure~\ref{fig:auc_beforecalib}). Recalibrating the baseline hazard of upgrading in validation cohorts resolved this issue (Supplementary~Figure~6). We compared risk predictions from the recalibrated models, with predictions from separately fitted cohort-specific joint models (Supplementary~Figure~7). The difference in predictions was lowest in Johns Hopkins cohort (impact of PSA on upgrading-risk similar to PRIAS). Comprehensive results are in Supplementary~A.2~and~B.
+The time-dependent AUC, calibration plot, and time-dependent MAPE of our model are shown in Figure~\ref{fig:auc_beforecalib}, and Supplementary~Figure~8. In all cohorts, time-dependent AUC was moderate (0.6 to 0.7) over the whole follow-up period. Time-dependent MAPE was moderate (0.1 to 0.2) in those cohorts where the impact of PSA on upgrading-risk was similar to PRIAS (e.g., Hopkins cohort, Supplementary~Table~8), and large (0.2 to 0.3) otherwise. Our model was miscalibrated for validation cohorts (Panel~B, Figure~\ref{fig:auc_beforecalib}). Recalibrating the baseline hazard of upgrading in validation cohorts resolved this issue (Supplementary~Figure~6). We compared risk predictions from the recalibrated models, with predictions from separately fitted cohort-specific joint models (Supplementary~Figure~7). The difference in predictions was lowest in the Johns Hopkins cohort (impact of PSA on upgrading-risk similar to PRIAS). Comprehensive results are in Supplementary~A.2~and~B.
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/auc_beforecalib.eps}}
@@ -11,7 +11,9 @@ The time-dependent AUC, calibration plot, and time-dependent MAPE of our model a
 \end{figure}
 
 \subsection{Personalized Biopsy Schedules}
-We employed the PRIAS based fitted model to create personalized biopsy schedules for real PRIAS patients. Specifically, first using the model and patient's observed data, we predicted his cumulative upgrading-risk (Figure~\ref{fig:demo_pat1}) on all of his future follow-up visits (biannually in PRIAS). Subsequently, we planned biopsies on those future visits where his conditional cumulative upgrading-risk was more than a certain threshold (Supplementary~Figure~9). Example personalized schedules based on 5\% and 10\% risk thresholds are shown in Figure~\ref{fig:demo_pat1}, and in Supplementary~Figure~10--12. For both personalized and fixed schedules, we estimated the expected time delay in detecting upgrading if the patient progresses before the time of the last planned biopsy (Panel~C, Figure~\ref{fig:demo_pat1}). This delay is also personalized (Supplementary~C.1). That is, even if two different patients are prescribed the same biopsy schedule, their expected delays will depend on their individual upgrading-risk profiles. Patients/doctors can utilize the expected delay and schedule of biopsies as criteria to compare fixed, and different risk-based personalized schedules.
+We employed the PRIAS based fitted model to create personalized biopsy schedules for real PRIAS patients. Particularly, first using the model and patient's observed data, we predicted his cumulative upgrading-risk (Figure~\ref{fig:demo_pat1}) on all of his future follow-up visits (biannually in PRIAS). Subsequently, we planned biopsies on those future visits where his conditional cumulative upgrading-risk was more than a certain threshold (see Supplementary~C for mathematical details). The choice of this threshold dictates the timing of biopsies in a risk-based personalized schedule. For example, personalized schedules based on 5\% and 10\% risk thresholds are shown in Figure~\ref{fig:demo_pat1}, and in Supplementary~Figure~10--12. 
+
+To facilitate the choice of a risk-threshold, and for comparing the consequences of opting for a risk-based schedule versus any other schedule (e.g., annual, PRIAS), we predict expected time delay in detecting upgrading if a schedule is followed. This delay can be predicted for any schedule. For example, in Panel~C of Figure~\ref{fig:demo_pat1}, the annual schedule has the least expected delay. In contrast, a personalized schedule based on a 10\% risk threshold has a slightly larger expected delay, but it also schedules much fewer biopsies. An important aspect of this delay is that it is personalized as well. This is because it is estimated using all available clinical data of the patient (see Supplementary~C). That is, even if two different patients are prescribed the same biopsy schedule, their expected delays will be different. While the timing and the total number of planned biopsies denote the burden of a schedule, a shorter expected time delay in detecting upgrading can be a benefit. These two, along with other measures such as a patient's comorbidities, anxiety, etc., can help to make an informed decision of biopsy. 
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/demo_pat1.eps}}
@@ -20,4 +22,4 @@ We employed the PRIAS based fitted model to create personalized biopsy schedules
 \end{figure}
 
 \subsection{Web-Application}
-We implemented our model and personalized schedules in a user-friendly web-application \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}. Currently, the web-application supports PRIAS and the six validation cohorts. Patient data can be entered manually and in Microsoft Excel format. Predictions for upgrading-risk are available for a currently limited, cohort-specific, follow-up period (Supplementary~Table~9). The web-application visualizes the timing of biopsies, and expected time delay in detecting upgrading, for personalized schedules based on 5\%, 10\%, and 15\% risk threshold; annual biopsies; biennial biopsies; and PRIAS schedule.
+We implemented the PRIAS based model and recalibrated models for GAP3 cohorts, and personalized schedules in a user-friendly web-application \url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}. This application also works on mobile devices. Patient data can be entered in Microsoft Excel format. The maximum follow-up time up to which predictions can be obtained depends on each cohort (Supplementary~Table~9). The web-application supports personalized, annual, and PRIAS schedules. For personalized schedules, users can control the choice of risk-threshold and compare the risk-based schedule's timing of biopsies, and expected time delay in detecting upgrading, with annual and PRIAS schedule before making a decision.
