--- a/report/clinical/BJUI/supplementary.tex
+++ b/report/clinical/BJUI/supplementary.tex
@@ -61,7 +61,7 @@
 \begin{document}
 
 \begin{frontmatter}
-\title{Supplementary Materials for ``A Ready To Use Web-Application Providing a Personalized Biopsy Schedule for Men With Low-Risk PCa Under Active Surveillance''}
+\title{Supplementary Materials for ``Risk of Upgrading Based Personalized Biopsy Schedules for Prostate Cancer Active Surveillance Patients''}
 
 %% Group authors per affiliation:
 \author[1]{Anirudh Tomer\corref{corauthor}, MSc} 
