--- a/report/clinical/BJUI/mainmatter/discussion.tex
+++ b/report/clinical/BJUI/mainmatter/discussion.tex
@@ -1,9 +1,9 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
-We successfully developed and externally validated a model for predicting upgrading-risk~\citep{bruinsma2017expert} in prostate cancer AS, and providing risk-based personalized biopsy decisions. Our work has four novel features over earlier risk calculators~\citep{coley2017prediction,ankerst2015precision}. First, our model was fitted to the world's largest AS dataset PRIAS and externally validated in the largest six cohorts of the Movember Foundation's GAP3 database~\citep{gap3_2018}. Second, the model predicts a patient's current and future upgrading-risk in a personalized manner. Third, using the predicted risks, we created personalized biopsy schedules and also calculated the expected time delay in detecting upgrading (less is beneficial) if that schedule was followed. Thus, patients/doctors can compare schedules before making a choice. Fourth, we implemented our methodology in a user-friendly web-application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}) for both PRIAS and validated cohorts.
+We successfully developed and externally validated a statistical model for predicting upgrading-risk~\citep{bruinsma2017expert} in prostate cancer AS, and providing risk-based personalized biopsy decisions. Our work has four novel features over earlier risk calculators~\citep{coley2017prediction,ankerst2015precision}. First, our model was fitted to the world's largest AS dataset PRIAS and externally validated in the largest six cohorts of the Movember Foundation's GAP3 database~\citep{gap3_2018}. Second, the model predicts a patient's current and future upgrading-risk in a personalized manner. Third, using the predicted risks, we created personalized biopsy schedules and also calculated the expected time delay in detecting upgrading (less is beneficial) if that schedule was followed. Thus, patients/doctors can compare schedules before making a choice. Fourth, we implemented our methodology in a user-friendly web-application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}) for both PRIAS and validated cohorts.
 
-Our model is useful for numerous patients from PRIAS and validated cohorts. The discrimination ability of our model, exhibited by the \textit{time-dependent} AUC, was moderate (0.55--0.75). This is possible because, unlike the standard AUC~\citep{steyerberg2010assessing}, the time-dependent AUC utilizes only the validation data available until the time at which it is calculated. The same holds for the time-dependent MAPE (mean absolute prediction error). Although, MAPE varied much more between cohorts than AUC. In cohorts where the effect size for the impact of PSA value and velocity on upgrading-risk was similar to that for PRIAS (e.g., Hopkins cohort), MAPE was moderate. Otherwise, MAPE was large (e.g., KCL and MUSIC cohorts). In all cohorts, MAPE decreased rapidly after year one of follow-up. A plausible reason is that at year one, the validation data also contains those patients who may have been misclassified as Gleason grade group~1 at the time of inclusion in AS. This issue can be obviated by scheduling a compulsory biopsy at year one for all patients (current PRIAS recommendation). Last, we required recalibration of our model's baseline hazard of upgrading for all validation cohorts.
+Our model and methods can be useful for numerous patients from PRIAS and validated GAP3 cohorts. The model utilizes all repeated PSA measurements, results of previous biopsies, and baseline characteristics of a patient. Although we could not include MRI and PSA volume because of sparsely available data in both PRIAS and GAP3 databases, our model is extendable to include them in the near future. The current discrimination ability of our model, exhibited by the \textit{time-dependent} AUC, was between 0.6 and 0.7 over-follow. While this is moderate, it is also so because unlike the standard AUC~\citep{steyerberg2010assessing} the time-dependent AUC is more conservative as it utilizes only the validation data available until the time at which it is calculated. The same holds for the time-dependent MAPE (mean absolute prediction error), although it varied much more between cohorts than AUC. In cohorts where the effect size for the impact of PSA value and velocity on upgrading-risk was similar to that for PRIAS (e.g., Hopkins cohort), MAPE was moderate. Otherwise, MAPE was large (e.g., KCL and MUSIC cohorts). We required recalibration of our model's baseline hazard of upgrading for all validation cohorts. The PRIAS and validation cohorts cover nearly 73\% of all GAP3 patients.
 
-The clinical implications of our work are as follows. First, the cause-specific cumulative upgrading-risk at year five of follow-up was at most 50\% in all cohorts (Panel~B, Figure~\ref{fig:auc_beforecalib}). That is, many patients may not require all biopsies planned in the first five years of AS. Given the non-compliance and burden of frequent biopsies~\citep{bokhorst2015compliance}, the availability of our methodology as a web-application may encourage patients/doctors to consider upgrading-risk based personalized schedules instead. An additional advantage of personalized schedules is that they update as more patient data becomes available over follow-up. We have shown via a simulation study~\citep{tomer2019personalized} that personalized schedules may reduce, on average, six biopsies compared to annual schedule and two biopsies compared to PRIAS schedule in slow/non-progressing AS patients, while maintaining almost the same time delay in detecting upgrading as PRIAS schedule. Personalized schedules with different risk thresholds indeed have different performance. In this regard, to assist patients/doctors in choosing between fixed schedules and personalized schedules based on different risk thresholds, the web-application provides a patient-specific estimate of the expected time delay in detecting upgrading, for both personalized and fixed schedules. We hope that this will objectively address patient apprehensions regarding adverse outcomes in AS.
+The clinical implications of our work are as follows. First, the cause-specific cumulative upgrading-risk at year five of follow-up was at most 50\% in all cohorts (Panel~B, Figure~\ref{fig:auc_beforecalib}). That is, many patients may not require some of the biopsies planned in the first five years of AS. Given the non-compliance and burden of frequent biopsies~\citep{bokhorst2015compliance}, the availability of our methodology as a web-application may encourage patients/doctors to consider upgrading-risk based personalized schedules instead. An additional advantage of personalized schedules is that they update as more patient data becomes available over follow-up. We have shown via a simulation study~\citep{tomer2019personalized} that personalized schedules plan, on average, six fewer biopsies compared to annual schedule and two fewer biopsies than the PRIAS schedule in slow/non-progressing AS patients, while maintaining almost the same time delay in detecting upgrading as PRIAS schedule. Personalized schedules with different risk thresholds indeed have different performance. In this regard, to assist patients/doctors in choosing between fixed schedules and personalized schedules based on different risk thresholds, the web-application provides a patient-specific estimate of the expected time delay in detecting upgrading, for both personalized and fixed schedules. We hope that this will objectively address patient apprehensions regarding adverse outcomes in AS. Last, we note that our web-application should only be used to schedule biopsies after the first compulsory confirmatory biopsy at year one of follow-up.
 
-This work has certain limitations. Predictions for upgrading-risk, and personalized schedules are available only for a currently limited, cohort-specific, follow-up period (Supplementary~Table~9). This problem can be mitigated by refitting the model with new follow-up data in the future. Recently, some cohorts started utilizing MRI to explore the possibility of targeting visible lesions by biopsy. Presently, the GAP3 database has limited MRI follow-up data available. As more such data becomes available, the current model can be extended to include MRI based predictors. We scheduled biopsies using cause-specific cumulative upgrading-risk, which ignores competing events such as treatment based on the number of positive biopsy cores. Employing a competing-risk model may lead to improved personalized schedules. Upgrading is susceptible to inter-observer variation too. Models which account for this variation~\citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, even with an enhanced risk prediction model, the methodology for personalized scheduling and calculation of expected time delay (Supplementary~C) need not change.
+This work has certain limitations. Predictions for upgrading-risk and personalized schedules are available only for a currently limited, cohort-specific, follow-up period (Supplementary~Table~9). This problem can be mitigated by refitting the model with new follow-up data in the future. Recently, some cohorts started utilizing MRI to explore the possibility of targeting visible lesions by biopsy. Presently, the GAP3 database has limited MRI follow-up data available. As more such data becomes available, the current model can be extended to include MRI based predictors. We scheduled biopsies using cause-specific cumulative upgrading-risk, which ignores competing events such as treatment based on the number of positive biopsy cores. Employing a competing-risk model may lead to improved personalized schedules. Upgrading is susceptible to inter-observer variation too. Models which account for this variation~\citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. Even with an enhanced risk prediction model, the methodology for personalized scheduling and calculation of expected time delay (Supplementary~C) need not change. Last, our web-application only allows uploading patient data in Microsoft Excel format. Connecting it with patient databases can improve usability. However, a validated upgrading-risk calculator and risk-based biopsy schedules implemented in a web-application is a significant first step towards more informed biopsy decisions in AS.
