--- a/report/clinical/BJUI/mainmatter/introduction.tex
+++ b/report/clinical/BJUI/mainmatter/introduction.tex
@@ -3,22 +3,22 @@
 
 % !TEX root =  ../main_manuscript.tex 
 \section{Introduction}
-Patients with low- and very low-risk screening-detected localized prostate cancer are usually recommended active surveillance (AS) instead of immediate radical treatment~\citep{briganti2018active}. In AS, cancer progression is routinely monitored via prostate-specific antigen (PSA), digital rectal examination, and repeat biopsies. Among these, the strongest indicator of cancer-related outcomes is the biopsy Gleason grade group~\citep{epsteinGG2014}. When it increases from group~1 (Gleason 3+3) to 2 (Gleason 3+4) or higher, called \textit{upgrading}~\citep{bruinsma2017expert}, patients are commonly advised curative treatment~\citep{bul2013active}.
+Patients with low- and very low-risk screening-detected localized prostate cancer are usually recommended active surveillance (AS) instead of immediate radical treatment~\citep{briganti2018active}. In AS, cancer progression is routinely monitored via prostate-specific antigen (PSA), digital rectal examination (DRE), repeat biopsies, and recently magnetic resonance imaging (MRI). Among these, the strongest indicator of cancer-related outcomes is the biopsy Gleason grade group~\citep{epsteinGG2014}. When it increases from group~1 (Gleason 3+3) to 2 (Gleason 3+4) or higher, it is called \emph{upgrading}~\citep{bruinsma2017expert}. Upgrading is a key endpoint in AS upon which patients are commonly advised curative treatment~\citep{bul2013active}. 
+
+In AS, biopsies are always conducted with a time gap between them. Consequently, upgrading is always detected with a time delay (Figure~\ref{fig:delay_explanation}) that cannot be measured directly. For detecting upgrading timely, many patients are prescribed fixed and frequent biopsies, most often annually~\cite{loeb2014heterogeneity}. Such one-size-fits-all schedules lead to unnecessary biopsies in slow/non-progressing patients. Biopsies are invasive, may be painful, and are prone to medical complications such as bleeding and septicemia\citep{loeb2013systematic}. Thus, biopsy burden and patient non-compliance to frequent biopsies~\citep{bokhorst2015compliance} have raised concerns regarding the optimal biopsy schedule~\citep{inoue2018comparative, bratt2013study} in AS.
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/delay_explanation.eps}}
-\caption{\textbf{Trade-off between the number of biopsies and time delay in detecting upgrading (Increase in Gleason grade group from 1 to 2 or higher):} The true time of upgrading for the patient in this figure is July 2008. When biopsies are scheduled annually (\textbf{Panel~A}), upgrading is detected in January 2009 with a time delay of six months, and a total of four biopsies are scheduled. When biopsies are scheduled biennially (\textbf{Panel~B}), upgrading is detected in January 2010 with a time delay of 18 months, and a total of three biopsies are scheduled. Since biopsies are conducted periodically, the time of upgrading is observed as an interval. For example, between Jan~2008--Jan~2009 in \textbf{Panel~A} and between Jan~2008--Jan~2010 in \textbf{Panel~B}. The phrase `Gleason grade group' is shortened to `Gleason grade' for brevity.}
+\caption{\textbf{Trade-off between the timing and number of biopsies (burden) and time delay in detecting Gleason upgrading (shorter is better):} The true time of Gleason upgrading (increase in Gleason grade group from group~1 to~2 or higher) for the patient in this figure is July 2008. When biopsies are scheduled annually (\textbf{Panel~A}), upgrading is detected in January 2009 with a time delay of six months, and a total of four biopsies are scheduled. When biopsies are scheduled biennially (\textbf{Panel~B}), upgrading is detected in January 2010 with a time delay of 18 months, and a total of three biopsies are scheduled. Since biopsies are conducted periodically, the time of upgrading is observed as an interval. For example, between Jan~2008--Jan~2009 in \textbf{Panel~A} and between Jan~2008--Jan~2010 in \textbf{Panel~B}. The phrase `Gleason grade group' is shortened to `Gleason grade' for brevity.}
 \label{fig:delay_explanation}
 \end{figure}
 
-Usually, AS protocols schedule biopsies periodically. Consequently, upgrading is always detected with a time delay (Figure~\ref{fig:delay_explanation}). For detecting upgrading timely, many AS programs schedule fixed and frequent biopsies (e.g.,~annually) for all patients~\citep{nieboer2018active,loeb2014heterogeneity}. However, this leads to unnecessary biopsies in slow/non-progressing patients. Biopsies are invasive, may be painful, and are prone to medical complications such as bleeding and septicemia\citep{loeb2013systematic}. Biopsy burden and patient non-compliance to frequent biopsies~\citep{bokhorst2015compliance} have raised concerns regarding the optimal biopsy schedule~\citep{inoue2018comparative, bratt2013study}. In this regard, in some cohorts, magnetic resonance imaging (MRI) is employed for targeted biopsies and to study its value for tumor monitoring. Although, due to currently limited AS data, MRI's value is not clear. Others have proposed the option of scheduling biopsies infrequently (e.g., biennially)~\citep{inoue2018comparative,de2017estimating}. However, due to differences in baseline upgrading-risk across cohorts~\citep{inoue2018comparative}, fixed biopsy schemes can still lead to many unnecessary biopsies. A promising alternative to fixed schedules are personalized biopsy schedules based on the patient-specific upgrading-risk (Figure~\ref{fig:riskBasedExample}).
+Apart from the confirmatory biopsy at year one of AS~\citep{bokhorst2015compliance}, opinions and practice regarding the timing of remaining biopsies lack a consensus~\citep{nieboer2018active}. Some support periodical one-size-fits-all biopsy schedules instead of schedules based on clinical data and MRI results~\citep{chesnut2019role,loeb2014heterogeneity}. Others suggest infrequent periodical schedules (e.g., biennially)~\citep{inoue2018comparative,de2017estimating}. In contrast, many AS programs utilize patients' observed PSA, DRE, previous biopsy Gleason grade, and lately, MRI results to decide biopsies~\citep{kasivisvanathan2020magnetic,bul2013active,nieboer2018active}. However, each of these approaches has limitations. For example, one-size-fits-all schedules can lead to many unnecessary biopsies because of differences in baseline \emph{upgrading-risk} across cohorts~\citep{inoue2018comparative}. Whereas, since observed data has measurement error (e.g., PSA fluctuations), a flaw of using it directly is that it may lead to poor decisions. Also, typically such decisions rely only on the latest data point and ignore previous repeated measurements. A novel alternative that counters these drawbacks is first processing patient data via a statistical model, and subsequently using model predicted upgrading-risks to create \emph{personalized} biopsy schedules~\citep{nieboer2018active} (Figure~\ref{fig:riskBasedExample}). While, upgrading-risk calculators are not new~\citep{coley2017prediction,ankerst2015precision,partin1993use,makarov2007updated}, not all are personalized either. Besides, they do not specify how risk predictions can be exploited to create a schedule.
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/riskBasedExample.eps}}
-\caption{\textbf{Motivation for personalized upgrading-risk based decisions of biopsy}: Patient~A (\textbf{Panel~A}) and B (\textbf{Panel~B}) had their latest biopsy at year one of follow-up (green vertical line). Patient~A's prostate-specific antigen (PSA) profile remained stable until his current visit at year two, whereas patient~B's profile has shown a rise. Consequently, patient~B's upgrading-risk at the current visit (year two) is higher than that of patient~A. This makes patient~B a more suitable candidate for biopsy than Patient~A. Risk estimates in this figure are only illustrative.}
+\caption{\textbf{Motivation for personalized upgrading-risk based biopsy decisions}: To combine patients' complete longitudinal data and results from previous biopsies into estimates for risk of Gleason upgrading and using these estimates to schedule biopsies. For example, Patient~A (\textbf{Panel~A}) and B (\textbf{Panel~B}) had their latest biopsy at year one of follow-up (green vertical line). Patient~A's prostate-specific antigen (PSA) profile remained stable until his current visit at year two, whereas patient~B's profile has shown a rise. Consequently, patient~B's upgrading-risk at the current visit (year two) is higher than that of patient~A. This makes patient~B a more suitable candidate for biopsy than Patient~A. Risk estimates in this figure are only illustrative.}
 \label{fig:riskBasedExample}
 \end{figure}
 
-The first challenge in creating personalized biopsy schedules is developing a statistical model to consolidate accumulated patient data (e.g., PSA, previous biopsy results) into predictions for upgrading-risk. Existing upgrading-risk~\citep{partin1993use,makarov2007updated} calculators use only the latest PSA measurement of a patient. Comparatively, more information is captured by considering all repeatedly measured PSA, previous biopsy results, and baseline characteristics of a patient. To this end, a suitable model is the joint model for time-to-event and longitudinal data~\citep{tomer2019, coley2017prediction,rizopoulos2012joint}. A joint model predicts upgrading-risk in a personalized manner. However, a subsequent challenge is translating predicted risks into clinical decisions. For example, a 10\% upgrading-risk can be perceived high/low depending upon the patient's age. Patients may also weigh risks of upgrading with the potential \textit{consequences} of another biopsy. Two such relevant consequences (Figure~\ref{fig:delay_explanation}) are the timing and the total number of planned biopsies (burden), and the time delay in detecting upgrading (smaller is beneficial). The relative importance of these consequences can vary between the patients, and also within a patient over the follow-up period.
-
-The goal of this work is two-fold. First, to develop a robust, generalizable model that gives reliable estimates for individual upgrading-risk in AS. Second, to utilize the predicted upgrading-risks to create personalized biopsy schedules. To facilitate shared decision making of biopsy schedules, we also intend to provide quantitative estimates of the aforementioned \textit{consequences} of opting for a personalized versus the standard fixed schedule. For developing our model, we will use the world's largest AS dataset PRIAS. Subsequently, we want to externally validate our model in the largest six AS cohorts from the Movember Foundation's GAP3 database~\citep{gap3_2018}. Last, we intend to implement our model and methodology in a web-application.
+The work is motivated by the problem of scheduling biopsies in AS, and our goal is two-fold. First, we want to assist practitioners in using clinical data in biopsy decisions in a statistically sound manner. To this end, we plan to develop a robust, generalizable statistical model that provides reliable individual upgrading-risk in AS. Subsequently, we will employ these predictions to derive risk-based personalized biopsy schedules. Our second goal is to enable shared decision making of a biopsy schedule. We intend to achieve this by allowing patients and doctors to compare the \emph{burden} and \emph{benefit} (Figure~\ref{fig:delay_explanation}) of opting for personalized schedules versus periodical schedules versus schedules based on clinical data. Specifically, we propose timing and number of planned biopsies (more/frequent are burdensome), and the expected time delay in detecting upgrading (shorter is beneficial) for any given schedule. In this whole process, we want to capture the maximum possible information from the available data. Thus, we will exploit all repeated measurements of patients, previous biopsy results, baseline characteristics, and keep our model flexible to accommodate novel biomarkers in the future. To fit this model, we will use data of the world's largest AS study, Prostate Cancer Research International Active Surveillance (PRIAS). To evaluate our model, we will externally validate it in the largest six AS cohorts from the Movember Foundation's Global Action Plan (GAP3) database~\citep{gap3_2018}. Last, we aim to implement the validated model and methodology in a web-application.
